<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="10dp"
    android:background="@android:color/white">

    <TextView
        android:id="@+id/textView1Act1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txv1Activity1"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/editText1Act1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="" />

    <TextView
        android:id="@+id/textView2Act1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txv2Activity1"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/editText2Act1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:text="" />

    <Button
        android:id="@+id/btn1Act1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn1Activity1" />

    <TextView
        android:id="@+id/textView3Act1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:text=""
        android:textColor="@color/colorValidacion"
        android:gravity="center" />

    <Button
        android:id="@+id/btn2Act1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn2Activity1" />


</LinearLayout>
